--- a/GeeksNearby-mobile/ios/GeeksNearby/Plugins/README
+++ b/GeeksNearby-mobile/ios/GeeksNearby/Plugins/README
@@ -1,5 +1,3 @@
-#!/bin/bash
-
 #
 # Licensed to the Apache Software Foundation (ASF) under one
 # or more contributor license agreements.  See the NOTICE file
@@ -19,29 +17,4 @@
 # under the License.
 #
 
-#
-# compile and launch a Cordova/iOS project to the simulator
-#
-
-set -e
-
-CORDOVA_PATH=$( cd "$( dirname "$0" )" && pwd )
-PROJECT_PATH=$CORDOVA_PATH/..
-
-for file in $PROJECT_PATH/*.xcodeproj; do
-  PROJECT_NAME=$(basename "$file" .xcodeproj)
-done;
-
-cd $PROJECT_PATH
-
-APP=build/$PROJECT_NAME.app
-SDK=`xcodebuild -showsdks | grep Sim | tail -1 | awk '{print $6}'`
-
-xcodebuild -project $PROJECT_NAME.xcodeproj -arch i386 -target $PROJECT_NAME -configuration Debug -sdk $SDK clean build VALID_ARCHS="i386" CONFIGURATION_BUILD_DIR=$PROJECT_PATH/build
-
-# launch using emulate
-
-$CORDOVA_PATH/emulate $PROJECT_PATH/$APP
-
-
-
+Put the .h and .m files of your plugin here. The .js files of your plugin belong in the www folder.
